Fix T45048: wrong tooltips in Video Sequence Editor's "Strip" Menu (mute/unmute).